--- a/css/main.css
+++ b/css/main.css
@@ -500,53 +500,461 @@ body .container {
   position: relative;
   transition: clip-path 0.3s ease;
 }
-.newArrivals .sectionCard .cardProducts .article .smallCard {
+.newArrivals .sectionCard .cardProducts .article1 .smallCard {
   display: none;
 }
-.newArrivals .sectionCard .cardProducts .article .outFit {
+.newArrivals .sectionCard .cardProducts .article1 #outFit {
   width: 100%;
 }
-.newArrivals .sectionCard .cardProducts .article .new {
+.newArrivals .sectionCard .cardProducts .article1 .new {
   display: none;
 }
-.newArrivals .sectionCard .cardProducts .article .skull {
-  width: 35px;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 1;
-}
-.newArrivals .sectionCard .cardProducts .article .skull:checked + .new {
+.newArrivals .sectionCard .cardProducts .article1 .new:checked + .smallCard {
   display: flex;
-  width: 60%;
+  flex-direction: column;
+  width: 100%;
   height: auto;
   cursor: pointer;
-  background-color: #272727;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
   position: absolute;
-  top: 125px;
+  top: 70px;
   right: 25px;
   box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
   transition: all 0.3s ease;
 }
-.newArrivals .sectionCard .cardProducts .article .skull:checked + .new:hover {
+.newArrivals .sectionCard .cardProducts .article1 .new:checked + .smallCard:hover {
   box-shadow: 0 0 4px 3px #474747;
 }
-.newArrivals .sectionCard .cardProducts .article .skull:checked + .new .outfit {
-  width: 50%;
+.newArrivals .sectionCard .cardProducts .article1 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
 }
-.newArrivals .sectionCard .cardProducts .article .skull:checked + .new .price {
+.newArrivals .sectionCard .cardProducts .article1 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article1 .new:checked + .smallCard .price {
   height: 50px;
-  color: #fff7f7;
-  font-size: 0.8rem;
-  font-weight: 400;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
   font-family: "Jura", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article1 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+.newArrivals .sectionCard .cardProducts .article2 .smallCard {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article2 #outFit {
+  width: 100%;
+}
+.newArrivals .sectionCard .cardProducts .article2 .new {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article2 .new:checked + .smallCard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article2 .new:checked + .smallCard:hover {
+  box-shadow: 0 0 4px 3px #474747;
+}
+.newArrivals .sectionCard .cardProducts .article2 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article2 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article2 .new:checked + .smallCard .price {
+  height: 50px;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article2 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+.newArrivals .sectionCard .cardProducts .article3 .smallCard {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article3 #outFit {
+  width: 100%;
+}
+.newArrivals .sectionCard .cardProducts .article3 .new {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article3 .new:checked + .smallCard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article3 .new:checked + .smallCard:hover {
+  box-shadow: 0 0 4px 3px #474747;
+}
+.newArrivals .sectionCard .cardProducts .article3 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article3 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article3 .new:checked + .smallCard .price {
+  height: 50px;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article3 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+.newArrivals .sectionCard .cardProducts .article4 .smallCard {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article4 #outFit {
+  width: 100%;
+}
+.newArrivals .sectionCard .cardProducts .article4 .new {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article4 .new:checked + .smallCard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article4 .new:checked + .smallCard:hover {
+  box-shadow: 0 0 4px 3px #474747;
+}
+.newArrivals .sectionCard .cardProducts .article4 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article4 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article4 .new:checked + .smallCard .price {
+  height: 50px;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article4 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+.newArrivals .sectionCard .cardProducts .article5 .smallCard {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article5 #outFit {
+  width: 100%;
+}
+.newArrivals .sectionCard .cardProducts .article5 .new {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article5 .new:checked + .smallCard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article5 .new:checked + .smallCard:hover {
+  box-shadow: 0 0 4px 3px #474747;
+}
+.newArrivals .sectionCard .cardProducts .article5 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article5 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article5 .new:checked + .smallCard .price {
+  height: 50px;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article5 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+.newArrivals .sectionCard .cardProducts .article6 .smallCard {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article6 #outFit {
+  width: 100%;
+}
+.newArrivals .sectionCard .cardProducts .article6 .new {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article6 .new:checked + .smallCard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article6 .new:checked + .smallCard:hover {
+  box-shadow: 0 0 4px 3px #474747;
+}
+.newArrivals .sectionCard .cardProducts .article6 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article6 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article6 .new:checked + .smallCard .price {
+  height: 50px;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article6 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+.newArrivals .sectionCard .cardProducts .article7 .smallCard {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article7 #outFit {
+  width: 100%;
+}
+.newArrivals .sectionCard .cardProducts .article7 .new {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article7 .new:checked + .smallCard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article7 .new:checked + .smallCard:hover {
+  box-shadow: 0 0 4px 3px #474747;
+}
+.newArrivals .sectionCard .cardProducts .article7 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article7 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article7 .new:checked + .smallCard .price {
+  height: 50px;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article7 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+.newArrivals .sectionCard .cardProducts .article8 .smallCard {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article8 #outFit {
+  width: 100%;
+}
+.newArrivals .sectionCard .cardProducts .article8 .new {
+  display: none;
+}
+.newArrivals .sectionCard .cardProducts .article8 .new:checked + .smallCard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  box-shadow: 0 0 3px 1px #474747;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article8 .new:checked + .smallCard:hover {
+  box-shadow: 0 0 4px 3px #474747;
+}
+.newArrivals .sectionCard .cardProducts .article8 .new:checked + .smallCard .outfit {
+  width: 100%;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
+}
+.newArrivals .sectionCard .cardProducts .article8 .new:checked + .smallCard .outfit:hover {
+  transform: scale(85%);
+}
+.newArrivals .sectionCard .cardProducts .article8 .new:checked + .smallCard .price {
+  height: 50px;
+  color: #BC2327;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.newArrivals .sectionCard .cardProducts .article8 .fadeAway .skull {
+  width: 35px;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
 }
 .newArrivals .ctaStore {
   display: flex;
