--- a/views/store.html
+++ b/views/store.html
@@ -154,7 +154,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="#" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -164,7 +164,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -174,7 +174,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -184,7 +184,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -194,7 +194,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -206,7 +206,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -216,7 +216,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -226,7 +226,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -236,7 +236,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -246,7 +246,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -258,7 +258,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -268,7 +268,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -278,7 +278,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -288,7 +288,7 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -298,7 +298,111 @@
                         <div class="info">
                             <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+            <div class="sectionCard g-1 d-flex flex-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic23.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic28.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic29.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic33.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic30.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+            <div class="sectionCard g-1 d-flex flex-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic20.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic17.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic36.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic35.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic34.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
