--- a/views/store.html
+++ b/views/store.html
@@ -230,12 +230,13 @@
                 </label>
                 <nav class="menuCartlist">
                     <div class="choiceCartlist">
-                        <h3 class="cartlistWord">WhishList</h3>
+                        <h3 class="cartlistWord">My cart</h3>
                         <div class="wish">
                             <article class="category">
                                 <h3 class="titleCartlist">Item</h3>
                                 <h3 class="titleCartlist">Pricing</h3>
-                                <h3 class="titleCartlist">Whish</h3>
+                                <h3 class="titleCartlist">Quantity</h3>
+                                <h3 class="titleCartlist">Total</h3>
                             </article>
                             <article class="cartlist">
                                 <div class="blockProduct">
@@ -247,7 +248,9 @@
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
                                         </div>
                                     </div>
-                                    <img class="itemCartlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
+                                    <label for="quantity"></label>
+                                    <input type="number" id="quantity" name="quantity" min="1" value="1">
+                                    <p class="total">$499</p>
                                 </div>
                             </article>
                             <article class="cartlist">
@@ -260,7 +263,9 @@
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
                                         </div>
                                     </div>
-                                    <img class="itemCartlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
+                                    <label for="quantity"></label>
+                                    <input type="number" id="quantity" name="quantity" min="1" value="1">
+                                    <p class="total">$499</p>
                                 </div>
                             </article>
                             <article class="cartlist">
@@ -273,9 +278,17 @@
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
                                         </div>
                                     </div>
-                                    <img class="itemCartlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
+                                    <label for="quantity"></label>
+                                    <input type="number" id="quantity" name="quantity" min="1" value="1">
+                                    <p class="total">$499</p>
                                 </div>
                             </article>
+                            <article class="outcome">
+                                <p class="price">Shipping........................00</p>
+                                <p class="price">Discount 25%..................$374</p>
+                                <h3 class="price">Total.......................$1122</h3>
+                            </article>
+                            <button class="checkOut">Secure checkout</button>
                         </div>
                     </div>
                 </nav>
