--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -129,16 +129,18 @@ html{
     box-shadow:$boxShadowMenu ;
     z-index: 10;
     padding-top: 30px;
+    align-items: flex-start;
     transform: translate(105%);
     transition: $transition;
     .menuCart{
+        width: 100%;
         .cartShop{
             .closeCross{
                 width:15px;
                 cursor: pointer;
                 position: absolute;
                 top:20px;
-                left:40px;
+                left:20px;
                 transform: rotate(0deg);
                 transition: $transition;
                 &:hover{
@@ -147,90 +149,102 @@ html{
             }
         }
         .menuCartlist{
+            align-items: flex-start;
             .choiceCartlist{
-                width: 90%;
-                @include display_flex_column_space_between_flex_start();
+                width: 100%;
                 margin: $neutralMargin;
-                padding: 0px 20px;
-                height: 380px;
-                overflow: scroll;
-                position: fixed;
-                top:60px;
-                left:20px;
+                @include display_flex_column_space_between_flex_start();
                 .cartlistWord{
-                    width: inherit;
+                    width: 100%;
+                    align-items: flex-start;
                     font-size: $MediumTitle;
                     font-family: $fontJura;
                     color:$primaryColor;
                     font-weight: $bold;
-                    margin:0px ;
+                    padding-left:20px ;
                 }
                 .cart{
+                    width:90%;
                     .category{
+                        width: 100%;
                         @extend .flexRowBetween;
-                        padding: 20px 0px;
-                        border-bottom: $borderBottom;
+                        padding: 20px 0px 0px 20px;
+                        border-bottom: none;
                         .titleCartlist{
+                            align-self: self-start;
                             font-size: $regularText;
                             font-family: $fontJura;
                             color:$primaryColor;
                             font-weight: $bold;
-                            margin: 15px 0px;
                         }
                     }
-                    .cartList{
-                        @extend .flexRowBetween;
-                        padding: 20px 0px;
-                        border-bottom: $borderBottom;
-                        .total{
-                            font-size: $regularText;
-                        }
-                        .itemProduct{
-                            width:12%;
-                        }
-                        .description{
-                            display: flex;
-                            flex-direction: column;
-                            .price{
-                                font-size: $smallText;
-                                font-family: $fontJura;
-                                color:$tertiaryColor;
-                                font-weight: $bold;
+                    .containerArticles{
+                        margin: 0px 20px;
+                        padding: 0px 20px 0px 0px;
+                        height: 310px;
+                        overflow: scroll;
+                        position: fixed;
+                        top:140px;
+                        left:0px;
+                        .cartList{
+                            @extend .flexRowBetween;
+                            padding: 20px 0px;
+                            border-bottom: $borderBottom;
+                            .total{
+                                font-size: $regularText;
                             }
-                            .icons{
-                                img{
-                                    width:20px;
-                                    cursor: pointer;
+                            .itemProduct{
+                                width:9%;
+                            }
+                            .description{
+                                .price{
+                                    font-size: $smallText;
+                                    font-family: $fontJura;
+                                    color:$tertiaryColor;
+                                    font-weight: $bold;
+                                }
+                                .icons{
+                                    img{
+                                        width:20px;
+                                        cursor: pointer;
+                                    }
                                 }
                             }
-                        }
-                        .itemNumber{
-                            #quantity{
-                                width:50px;
-                                height:35px;
-                                padding: 2px;
+                            .itemNumber{
+                                .counter{
+                                    background-color:$counterColor;
+                                    .minusBtn, .plusBtn{
+                                        width:35px;
+                                        height:35px;
+                                        font-size: $MediumTitle;
+                                        font-family: $fontJura;
+                                        color:$primaryColor;
+                                        font-weight: $ExtraBold;
+                                        border:none;
+                                    }
+                                    .counterValue{
+                                        padding: 2px;
+                                        font-weight: $ExtraBold;
+                                    }
+                                }
+                            }
+                            .total{
                                 font-size: $smallText;
                                 font-family: $fontJura;
                                 color:$primaryColor;
                                 font-weight: $bold;
                             }
                         }
-                        .total{
-                            font-size: $smallText;
-                            font-family: $fontJura;
-                            color:$primaryColor;
-                            font-weight: $bold;
-                        }
                     }
                 }
             }
             .outcomeCard{
-                width: 70%;
+                width: 65%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
                 position:absolute;
-                bottom:0px;
+                bottom:10px;
                 left:20px;
                 .outcome{
                     .shipping, .discount, .total{
@@ -253,7 +267,7 @@ html{
                     width: 100%;
                     padding: 10px 20px;
                     @extend .flexColumnCenterCenter;
-                    margin:20px auto;
+                    margin:10px auto;
                     font-size: $regularText;
                     font-family: $fontJura;
                     font-weight: $bold;
@@ -300,7 +314,7 @@ html{
             cursor: pointer;
             position: absolute;
             top:20px;
-            left:35px;
+            left:20px;
             transform: rotate(0deg);
             transition: $transition;
             &:hover{
@@ -327,6 +341,7 @@ html{
                     padding: 20px 0px;
                     border-bottom: 0;
                     .titleWishlist{
+                        text-align: right;
                         font-size: $regularText;
                         font-family: $fontJura;
                         color:$primaryColor;
@@ -354,9 +369,13 @@ html{
                             }
                             .icons{
                                 img{
-                                    width:20px;
+                                    width:15px;
                                 }
                             }
+                        }
+                        .itemWishlist{
+                            width:20px;
+                            cursor: pointer;
                         }
                     }
                 }
