--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -44,6 +44,7 @@ $backgroundColor:#f1f1f1;
 $moonBackgroundColor:#131313;
 $btnBackgroundColor:#3d3d3d;
 $secondaryBackground:#1b1b1b;
+$counterColor:#f0f0f0 ;
 $lineColor:#6b6b6b;
 
 // Shadows
